bug fixed deploy

--- a/templates/index.html
+++ b/templates/index.html
@@ -143,10 +143,10 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">RESULT</h5>
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <!-- <button type="button" class="close" data-dismiss="modal">&times;</button> -->
             </div>
             <div class="modal-body">
-        <p>The result is <b>{{output[0]}}</b> with the probability of {{output[1]}} %</p>
+        <p>{{output}}</p>
                 
             </div>
         </div>
